--- a/child-page/info.html
+++ b/child-page/info.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </div>
-        <div class="header my-5 px-3 px-lg-0">
+        <div class="header my-lg-5  px-3 px-lg-0">
             <div class="d-grid justify-content-center mb-5 mb-lg-0">
                 <div class="d-flex justify-content-center"><img src="img2/h1.png"></div>
                 <div class="hdItem">
@@ -52,12 +52,12 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex container"><img src="img2/h3.png" width="300px"></div>
+            <div class="d-flex container d-none d-md-flex"><img src="img2/h3.png" width="300px"></div>
             <div class="hdRight d-flex justify-content-end"><img src="img2/h2.png" width="55%"></div>
         </div>
     </header>
     <main>
-        <div class="container1 ctn py-5 ">
+        <div class="container1 ctn py-lg-5 ">
             <div class="container">
                 <div class="row my-5">
                     <div class="ctn-left d-flex col-lg-6 col-sm-12 justify-content-center mb-5">
